[gd_scene load_steps=10 format=3 uid="uid://q7na58p4oo3r"]

[ext_resource type="Script" path="res://scripts/enemy_4.gd" id="1_w2r3t"]
[ext_resource type="ArrayMesh" uid="uid://dmfcpfoxdeowo" path="res://assets/enemy/fireDemon.obj" id="2_dvvm6"]
[ext_resource type="AudioStream" uid="uid://c6vvbh86868nw" path="res://sounds/demonSounds.wav" id="3_hrqae"]
[ext_resource type="PackedScene" uid="uid://cv5yh37vpvyt4" path="res://scenes/enemy_health_bar.tscn" id="4_62y4l"]
[ext_resource type="PackedScene" uid="uid://c8y1u7h25cpww" path="res://scenes/demonDeath.tscn" id="5_nknfl"]
[ext_resource type="AudioStream" uid="uid://dluhp23fpkxov" path="res://sounds/demonDeath.wav" id="6_0mtri"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ulfji"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qg1h1"]

[sub_resource type="ViewportTexture" id="ViewportTexture_0vukn"]
viewport_path = NodePath("SubViewport")

[node name="enemy4" type="CharacterBody3D"]
script = ExtResource("1_w2r3t")

[node name="hurtbox" type="Area3D" parent="." groups=["enemies", "enemy2"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="hurtbox"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 1.36586, 0)
shape = SubResource("CapsuleShape3D_ulfji")

[node name="hitbox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="hitbox"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 1.36586, 0)
shape = SubResource("CapsuleShape3D_ulfji")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-3.64116e-08, 0, 1.25, 0, 1, 0, -0.833, 0, -5.46392e-08, 0, 0.75, 0)
mesh = ExtResource("2_dvvm6")

[node name="RayCast3D" type="RayCast3D" parent="MeshInstance3D"]
transform = Transform3D(40, 0, -3.55271e-15, 0, 1, 0, 1.42109e-13, 0, 1, 0.824393, 1.14081, 2.4014e-08)
target_position = Vector3(1, 0, 0)
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 1.37522, 0)
shape = SubResource("CapsuleShape3D_qg1h1")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = 0.5

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00536871, 1.65249, -0.00183249)
stream = ExtResource("3_hrqae")
volume_db = -2.0
unit_size = 1.0
pitch_scale = 1.3
autoplay = true

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.37591, 0)

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true

[node name="enemyHealthBar" parent="SubViewport" instance=ExtResource("4_62y4l")]
max_value = 100.0
value = 100.0

[node name="HealthBar" type="Sprite3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 2.77699, 0)
texture = SubResource("ViewportTexture_0vukn")

[node name="stunTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="demonDeath" parent="." instance=ExtResource("5_nknfl")]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0.558476, 0)
amount = 32
lifetime = 0.4

[node name="demonHit" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7532, 0)
stream = ExtResource("6_0mtri")
volume_db = -5.0
unit_size = 1.0
max_db = -5.0
pitch_scale = 1.2

[node name="deathSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7532, 0)
stream = ExtResource("6_0mtri")
volume_db = -5.0
unit_size = 1.0
max_db = -5.0
pitch_scale = 0.7

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="stunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="finished" from="demonDeath" to="." method="_on_demon_death_finished"]
